# Interact

./: Bindings.xml  CMakeLists.txt  CMakePresets.json  Game.cpp  Game.h  Interact.lua  Interact.toc  README.md  dllmain.cpp  vcpkg.json
include/: Game.h  Offsets.h
src/: dllmain.cpp
